Vite-comics: Add BONUS

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,4 +1,5 @@
 @use './node_modules/bootstrap/scss/bootstrap.scss';
 @use './partials/header';
 @use './partials/main';
+@use './partials/calltoaction';
 @use './partials/footer';
