--- a/src/assets/scss/partials/_header.scss
+++ b/src/assets/scss/partials/_header.scss
@@ -13,7 +13,7 @@
 
             &.selected {
                 color: $primary_color;
-                box-shadow: 0px 12px 0 -8px $primary_color;
+                box-shadow: 0px 66px 0 -17px #0282f9;
             }
         }
     }
