Vite-comics: Add styles to components

--- a/src/assets/scss/partials/_calltoaction.scss
+++ b/src/assets/scss/partials/_calltoaction.scss
@@ -3,12 +3,17 @@
 
 .call_to_action {
     background-color: $primary_color;
+    a{
+        text-decoration: none;
+        column-gap: 0.5rem;
+    
+        h6 {
+            color: $light;
+        }
 
-    h6 {
-        color: $light;
-    }
+        img {
+            width: 50px;
+        }
 
-    img {
-        width: 50px;
     }
 }
