--- a/src/assets/scss/partials/_variables.scss
+++ b/src/assets/scss/partials/_variables.scss
@@ -3,4 +3,5 @@ $secondary_color: #1C1C1C;
 $dark: #303030;
 $text-link: #959595;
 $light: #FFFFFF;
-$darker: #000000
+$darker: #000000;
+$dc-font:'Open Sans', sans-serif;
