--- a/src/assets/scss/partials/_header.scss
+++ b/src/assets/scss/partials/_header.scss
@@ -15,6 +15,12 @@
                 color: $primary_color;
                 box-shadow: 0px 66px 0 -17px #0282f9;
             }
+
+            &:hover {
+                color: $primary_color;
+                box-shadow: 0px 66px 0 -17px #0282f9;
+            }
+            
         }
     }
 
