Vite-comics: Add jumbotron and comics list

--- a/src/assets/scss/partials/_main.scss
+++ b/src/assets/scss/partials/_main.scss
@@ -1,10 +1,6 @@
 @use "variables" as *;
 
 main {
-    background-color: $darker;
+    background-color: $secondary_color;
     color: $light;
-
-    .container {
-        align-items: center;
-    }
 }
