--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -2,6 +2,8 @@
 @use './node_modules/bootstrap/scss/bootstrap.scss';
 @use './partials/header';
 @use './partials/main';
+@use './partials/jumbotron';
+@use './partials/comicsList';
 @use './partials/calltoaction';
 @use './partials/footer';
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
