Vite-comics: Add style to thumbs in comicList

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -4,6 +4,7 @@
 @use './partials/main';
 @use './partials/jumbotron';
 @use './partials/comicsList';
+@use './partials/comic';
 @use './partials/calltoaction';
 @use './partials/footer';
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
