--- a/src/assets/scss/partials/_comicsList.scss
+++ b/src/assets/scss/partials/_comicsList.scss
@@ -1,13 +1,14 @@
 @use "variables" as *;
 
-.container {
+.m_neg {
     align-items: center;
+    margin-top: -1.5rem;
+    
     .main_btn{
         background-color: $primary_color;
         font-weight: 600;
         border: none;   
         padding: 0.75rem 1.5rem;
-        margin-top: -1.5rem;
         a{
             text-decoration: none;
             color: $light;
