--- a/src/assets/scss/partials/_header.scss
+++ b/src/assets/scss/partials/_header.scss
@@ -1,6 +1,6 @@
 @use "variables" as *;
 
-.navbar {
+header {
     img {
         width: 80px;
     }
@@ -16,11 +16,15 @@
                 box-shadow: 0px 66px 0 -17px #0282f9;
             }
 
-            &:hover {
+            &:hover{
                 color: $primary_color;
                 box-shadow: 0px 66px 0 -17px #0282f9;
             }
             
+        }
+        li.nav-item {
+            min-width: 70px;
+            text-align: center;
         }
     }
 
